--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1040,5 +1040,30 @@
   publisher={Springer}
 }
 
+@Book{zipf1935,
+  title     = {The Psychobiology of Language},
+  publisher = {Houghton-Mifflin},
+  year      = {1935},
+  author    = {George K. Zipf},
+  address   = {New York, NY, USA},
+}
+
+@Book{manning2008,
+  title     = {Introduction to Information Retrieval},
+  publisher = {Cambridge University Press},
+  year      = {2008},
+  author    = {Christopher D. Manning and Prabhakar Raghavan and Hinrich Sch{\"u}tze},
+  address   = {New York, NY, USA},
+  isbn      = {0521865719, 9780521865715},
+}
+
+@Book{libroweb2008,
+  title     = {C{\'o}mo funciona la Web},
+  publisher = {Autoeditada},
+  year      = {2008},
+  author    = {Claudio Guti{\'e}rrez and Gonzalo Navarro and Ricardo Baeza-Yates and Carlos Hurtado and Marcelo Arenas and Mauricio Mar{\'i}n and Jos{\'e} M. Piquer and M.Andrea Rodr{\'i}guez and Javier Ruiz-del-Solar and Javier Velasco},
+  month     = jun,
+  isbn      = {978-956-319-225-1},
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
