--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1066,4 +1066,15 @@
   isbn      = {978-956-319-225-1},
 }
 
+@Article{salton1975vector,
+  author    = {Salton, Gerard and Wong, Anita and Yang, Chung-Shu},
+  title     = {A vector space model for automatic indexing},
+  journal   = {Communications of the ACM},
+  year      = {1975},
+  volume    = {18},
+  number    = {11},
+  pages     = {613--620},
+  publisher = {ACM},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
