--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1077,4 +1077,11 @@
   publisher = {ACM},
 }
 
+@TechReport{jacobbook,
+  author      = {Jacob Eisenstein},
+  title       = {Natural Language Processing},
+  institution = {Georgia Tech},
+  year        = {2018},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
