--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1084,4 +1084,14 @@
   year        = {2018},
 }
 
+@Article{collobert2011natural,
+  author  = {Collobert, Ronan and Weston, Jason and Bottou, L{\'e}on and Karlen, Michael and Kavukcuoglu, Koray and Kuksa, Pavel},
+  title   = {Natural language processing (almost) from scratch},
+  journal = {Journal of machine learning research},
+  year    = {2011},
+  volume  = {12},
+  number  = {Aug},
+  pages   = {2493--2537},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
