--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1094,4 +1094,11 @@
   pages   = {2493--2537},
 }
 
+@Book{bishop2006pattern,
+  title     = {Pattern recognition and machine learning},
+  publisher = {springer},
+  year      = {2006},
+  author    = {Bishop, Christopher M},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
