--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1101,4 +1101,26 @@
   author    = {Bishop, Christopher M},
 }
 
+@Article{hornik1989multilayer,
+  author    = {Hornik, Kurt and Stinchcombe, Maxwell and White, Halbert},
+  title     = {Multilayer feedforward networks are universal approximators},
+  journal   = {Neural networks},
+  year      = {1989},
+  volume    = {2},
+  number    = {5},
+  pages     = {359--366},
+  publisher = {Elsevier},
+}
+
+@Article{cybenko1989approximation,
+  author    = {Cybenko, George},
+  title     = {Approximation by superpositions of a sigmoidal function},
+  journal   = {Mathematics of control, signals and systems},
+  year      = {1989},
+  volume    = {2},
+  number    = {4},
+  pages     = {303--314},
+  publisher = {Springer},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
