--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1123,4 +1123,19 @@
   publisher = {Springer},
 }
 
+@Book{goodfellow2016deep,
+  title     = {Deep learning},
+  publisher = {MIT press},
+  year      = {2016},
+  author    = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+}
+
+@InProceedings{glorot2011deep,
+  author    = {Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
+  title     = {Deep sparse rectifier neural networks},
+  booktitle = {Proceedings of the fourteenth international conference on artificial intelligence and statistics},
+  year      = {2011},
+  pages     = {315--323},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
