--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -619,7 +619,7 @@
 
   Doi                      = {10.1111/coin.12024},
   ISSN                     = {1467-8640},
-  Keywords                 = {affect, tweets, social media, hashtags, basic emotions, personality detection, Big 5 model, word–emotion associations, sentiment analysis},
+  Keywords                 = {affect, tweets, social media, hashtags, basic emotions, personality detection, Big 5 model, word\D0emotion associations, sentiment analysis},
   Owner                    = {admin},
   Timestamp                = {2015.11.12},
   Url                      = {http://dx.doi.org/10.1111/coin.12024}
@@ -1138,4 +1138,92 @@
   pages     = {315--323},
 }
 
-@Comment{jabref-meta: databaseType:bibtex;}
+@Article{tibshirani1996regression,
+  author    = {Tibshirani, Robert},
+  title     = {Regression shrinkage and selection via the lasso},
+  journal   = {Journal of the Royal Statistical Society: Series B (Methodological)},
+  year      = {1996},
+  volume    = {58},
+  number    = {1},
+  pages     = {267--288},
+  publisher = {Wiley Online Library},
+}
+
+@Article{zou2005regularization,
+  author    = {Zou, Hui and Hastie, Trevor},
+  title     = {Regularization and variable selection via the elastic net},
+  journal   = {Journal of the royal statistical society: series B (statistical methodology)},
+  year      = {2005},
+  volume    = {67},
+  number    = {2},
+  pages     = {301--320},
+  publisher = {Wiley Online Library},
+}
+
+@Book{nesterov2018lectures,
+  title     = {Lectures on convex optimization},
+  publisher = {Springer},
+  year      = {2018},
+  author    = {Nesterov, Yurii},
+  volume    = {137},
+}
+
+
+@Article{polyak1964some,
+  author    = {Polyak, Boris T},
+  title     = {Some methods of speeding up the convergence of iteration methods},
+  journal   = {USSR Computational Mathematics and Mathematical Physics},
+  year      = {1964},
+  volume    = {4},
+  number    = {5},
+  pages     = {1--17},
+  publisher = {Elsevier},
+}
+
+@InProceedings{sutskever2013importance,
+  author    = {Sutskever, Ilya and Martens, James and Dahl, George and Hinton, Geoffrey},
+  title     = {On the importance of initialization and momentum in deep learning},
+  booktitle = {International conference on machine learning},
+  year      = {2013},
+  pages     = {1139--1147},
+}
+
+@article{duchi2011adaptive,
+  title={Adaptive subgradient methods for online learning and stochastic optimization},
+  author={Duchi, John and Hazan, Elad and Singer, Yoram},
+  journal={Journal of Machine Learning Research},
+  volume={12},
+  number={Jul},
+  pages={2121--2159},
+  year={2011}
+}
+
+
+@article{zeiler2012adadelta,
+  title={ADADELTA: an adaptive learning rate method},
+  author={Zeiler, Matthew D},
+  journal={arXiv preprint arXiv:1212.5701},
+  year={2012}
+}
+
+
+@article{tieleman2012lecture,
+  title={Lecture 6.5-rmsprop: Divide the gradient by a running average of its recent magnitude},
+  author={Tieleman, Tijmen and Hinton, Geoffrey},
+  journal={COURSERA: Neural networks for machine learning},
+  volume={4},
+  number={2},
+  pages={26--31},
+  year={2012}
+}
+
+
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
+}
+
+
+
