--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1225,5 +1225,19 @@
   year={2014}
 }
 
+@article{hinton2012improving,
+  title={Improving neural networks by preventing co-adaptation of feature detectors},
+  author={Hinton, Geoffrey E and Srivastava, Nitish and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan R},
+  journal={arXiv preprint arXiv:1207.0580},
+  year={2012}
+}
 
+@incollection{bengio2012practical,
+  title={Practical recommendations for gradient-based training of deep architectures},
+  author={Bengio, Yoshua},
+  booktitle={Neural networks: Tricks of the trade},
+  pages={437--478},
+  year={2012},
+  publisher={Springer}
+}
 
