--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1250,3 +1250,27 @@
   year={2017}
 }
 
+@inproceedings{mccallum2000maximum,
+  title={Maximum Entropy Markov Models for Information Extraction and Segmentation.},
+  author={McCallum, Andrew and Freitag, Dayne and Pereira, Fernando CN},
+  booktitle={Icml},
+  pages={591--598},
+  year={2000}
+}
+
+@inproceedings{Lafferty:2001:CRF:645530.655813,
+ author = {Lafferty, John D. and McCallum, Andrew and Pereira, Fernando C. N.},
+ title = {Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data},
+ booktitle = {Proceedings of the Eighteenth International Conference on Machine Learning},
+ series = {ICML '01},
+ year = {2001},
+ isbn = {1-55860-778-1},
+ pages = {282--289},
+ numpages = {8},
+ url = {http://dl.acm.org/citation.cfm?id=645530.655813},
+ acmid = {655813},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+} 
+
+
