--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -13,13 +13,7 @@
  Language Processing, {EMNLP} 2017, Copenhagen, Denmark, September
  9-11, 2017},
   Year                     = {2017},
-  Pages                    = {1615--1625},
-
-  Bibsource                = {dblp computer science bibliography, http://dblp.org},
-  Biburl                   = {http://dblp.org/rec/bib/conf/emnlp/FelboMSRL17},
-  Crossref                 = {DBLP:conf/emnlp/2017},
-  Timestamp                = {Fri, 08 Dec 2017 09:34:44 +0100},
-  Url                      = {https://aclanthology.info/papers/D17-1169/d17-1169}
+  Pages                    = {1615--1625}
 }
 
 @InProceedings{Wiebe2000,
@@ -1273,4 +1267,10 @@
  address = {San Francisco, CA, USA},
 } 
 
+@article{huang2015bidirectional,
+  title={Bidirectional LSTM-CRF models for sequence tagging},
+  author={Huang, Zhiheng and Xu, Wei and Yu, Kai},
+  journal={arXiv preprint arXiv:1508.01991},
+  year={2015}
+}
 
