--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1274,3 +1274,53 @@
   year={2015}
 }
 
+
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+
+@article{cho2014learning,
+  title={Learning phrase representations using RNN encoder-decoder for statistical machine translation},
+  author={Cho, Kyunghyun and Van Merri{\"e}nboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1406.1078},
+  year={2014}
+}
+
+
+@article{chung2014empirical,
+  title={Empirical evaluation of gated recurrent neural networks on sequence modeling},
+  author={Chung, Junyoung and Gulcehre, Caglar and Cho, KyungHyun and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1412.3555},
+  year={2014}
+}
+
+@inproceedings{jozefowicz2015empirical,
+  title={An empirical exploration of recurrent network architectures},
+  author={Jozefowicz, Rafal and Zaremba, Wojciech and Sutskever, Ilya},
+  booktitle={International Conference on Machine Learning},
+  pages={2342--2350},
+  year={2015}
+}
+
+@inproceedings{tang2015document,
+  title={Document modeling with gated recurrent neural network for sentiment classification},
+  author={Tang, Duyu and Qin, Bing and Liu, Ting},
+  booktitle={Proceedings of the 2015 conference on empirical methods in natural language processing},
+  pages={1422--1432},
+  year={2015}
+}
+
+@article{li2015tree,
+  title={When are tree structures necessary for deep learning of representations?},
+  author={Li, Jiwei and Luong, Minh-Thang and Jurafsky, Dan and Hovy, Eudard},
+  journal={arXiv preprint arXiv:1503.00185},
+  year={2015}
+}
+
