--- a/slides/NLP-seq2seq.tex
+++ b/slides/NLP-seq2seq.tex
@@ -124,7 +124,7 @@ Nearly any task in NLP can be formulated as a sequence to sequence (or condionat
 \begin{frame}{Conditioned Generation}
 \begin{scriptsize}
 \begin{itemize}
-\item While using the RNN as a generator is a cute exercise for demonstrating its strength, the power of RNN gnerator is really revealed when moving to a conditioned generation or enconder-decoder framework.
+\item While using the RNN as a generator is a cute exercise for demonstrating its strength, the power of RNN generator is really revealed when moving to a conditioned generation or enconder-decoder framework.
 \item Core idea: using two RNNs.
 \item Encoder: One RNN is used to encode the source input into a vector $\overrightarrow{c}$.
 \item Decoder: Another RNN is used to decode the encoder's output and generate the target output.
