--- a/slides/NLP-seq2seq.tex
+++ b/slides/NLP-seq2seq.tex
@@ -785,6 +785,7 @@ The traditional attention mechanism largely solved the first dependency by givin
 
 \item The Transformer is a powerful and efficient alternative to recurrent neural networks to model dependencies using only attention mechanisms.
 
+\item A very illustrative blog post about the Transformer: \url{http://jalammar.github.io/illustrated-transformer/}.
  
 \end{itemize}
 
