--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -13,7 +13,13 @@
  Language Processing, {EMNLP} 2017, Copenhagen, Denmark, September
  9-11, 2017},
   Year                     = {2017},
-  Pages                    = {1615--1625}
+  Pages                    = {1615--1625},
+
+  Bibsource                = {dblp computer science bibliography, http://dblp.org},
+  Biburl                   = {http://dblp.org/rec/bib/conf/emnlp/FelboMSRL17},
+  Crossref                 = {DBLP:conf/emnlp/2017},
+  Timestamp                = {Fri, 08 Dec 2017 09:34:44 +0100},
+  Url                      = {https://aclanthology.info/papers/D17-1169/d17-1169}
 }
 
 @InProceedings{Wiebe2000,
@@ -1219,108 +1225,4 @@
   year={2014}
 }
 
-@article{hinton2012improving,
-  title={Improving neural networks by preventing co-adaptation of feature detectors},
-  author={Hinton, Geoffrey E and Srivastava, Nitish and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan R},
-  journal={arXiv preprint arXiv:1207.0580},
-  year={2012}
-}
-
-@incollection{bengio2012practical,
-  title={Practical recommendations for gradient-based training of deep architectures},
-  author={Bengio, Yoshua},
-  booktitle={Neural networks: Tricks of the trade},
-  pages={437--478},
-  year={2012},
-  publisher={Springer}
-}
-
-
-@inproceedings{vaswani2017attention,
-  title={Attention is all you need},
-  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
-  booktitle={Advances in neural information processing systems},
-  pages={5998--6008},
-  year={2017}
-}
-
-@inproceedings{mccallum2000maximum,
-  title={Maximum Entropy Markov Models for Information Extraction and Segmentation.},
-  author={McCallum, Andrew and Freitag, Dayne and Pereira, Fernando CN},
-  booktitle={Icml},
-  pages={591--598},
-  year={2000}
-}
-
-@inproceedings{Lafferty:2001:CRF:645530.655813,
- author = {Lafferty, John D. and McCallum, Andrew and Pereira, Fernando C. N.},
- title = {Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data},
- booktitle = {Proceedings of the Eighteenth International Conference on Machine Learning},
- series = {ICML '01},
- year = {2001},
- isbn = {1-55860-778-1},
- pages = {282--289},
- numpages = {8},
- url = {http://dl.acm.org/citation.cfm?id=645530.655813},
- acmid = {655813},
- publisher = {Morgan Kaufmann Publishers Inc.},
- address = {San Francisco, CA, USA},
-} 
-
-@article{huang2015bidirectional,
-  title={Bidirectional LSTM-CRF models for sequence tagging},
-  author={Huang, Zhiheng and Xu, Wei and Yu, Kai},
-  journal={arXiv preprint arXiv:1508.01991},
-  year={2015}
-}
-
-
-@article{hochreiter1997long,
-  title={Long short-term memory},
-  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
-  journal={Neural computation},
-  volume={9},
-  number={8},
-  pages={1735--1780},
-  year={1997},
-  publisher={MIT Press}
-}
-
-@article{cho2014learning,
-  title={Learning phrase representations using RNN encoder-decoder for statistical machine translation},
-  author={Cho, Kyunghyun and Van Merri{\"e}nboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
-  journal={arXiv preprint arXiv:1406.1078},
-  year={2014}
-}
-
-
-@article{chung2014empirical,
-  title={Empirical evaluation of gated recurrent neural networks on sequence modeling},
-  author={Chung, Junyoung and Gulcehre, Caglar and Cho, KyungHyun and Bengio, Yoshua},
-  journal={arXiv preprint arXiv:1412.3555},
-  year={2014}
-}
-
-@inproceedings{jozefowicz2015empirical,
-  title={An empirical exploration of recurrent network architectures},
-  author={Jozefowicz, Rafal and Zaremba, Wojciech and Sutskever, Ilya},
-  booktitle={International Conference on Machine Learning},
-  pages={2342--2350},
-  year={2015}
-}
-
-@inproceedings{tang2015document,
-  title={Document modeling with gated recurrent neural network for sentiment classification},
-  author={Tang, Duyu and Qin, Bing and Liu, Ting},
-  booktitle={Proceedings of the 2015 conference on empirical methods in natural language processing},
-  pages={1422--1432},
-  year={2015}
-}
-
-@article{li2015tree,
-  title={When are tree structures necessary for deep learning of representations?},
-  author={Li, Jiwei and Luong, Minh-Thang and Jurafsky, Dan and Hovy, Eudard},
-  journal={arXiv preprint arXiv:1503.00185},
-  year={2015}
-}
-
+@Comment{jabref-meta: databaseType:bibtex;}
