--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1225,4 +1225,28 @@
   year={2014}
 }
 
+
+@incollection{bengio2012practical,
+  title={Practical recommendations for gradient-based training of deep architectures},
+  author={Bengio, Yoshua},
+  booktitle={Neural networks: Tricks of the trade},
+  pages={437--478},
+  year={2012},
+  publisher={Springer}
+}
+
+
+@article{srivastava2014dropout,
+  title={Dropout: a simple way to prevent neural networks from overfitting},
+  author={Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+  journal={The journal of machine learning research},
+  volume={15},
+  number={1},
+  pages={1929--1958},
+  year={2014},
+  publisher={JMLR. org}
+}
+
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
