--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1248,5 +1248,31 @@
 }
 
 
+@inproceedings{mccallum2000maximum,
+  title={Maximum Entropy Markov Models for Information Extraction and Segmentation.},
+  author={McCallum, Andrew and Freitag, Dayne and Pereira, Fernando CN},
+  booktitle={Icml},
+  volume={17},
+  pages={591--598},
+  year={2000}
+}
+
+
+@inproceedings{LaffertyMP01,
+  author    = {John D. Lafferty and
+               Andrew McCallum and
+               Fernando C. N. Pereira},
+  editor    = {Carla E. Brodley and
+               Andrea Pohoreckyj Danyluk},
+  title     = {Conditional Random Fields: Probabilistic Models for Segmenting and
+               Labeling Sequence Data},
+  booktitle = {Proceedings of the Eighteenth International Conference on Machine
+               Learning {(ICML} 2001), Williams College, Williamstown, MA, USA, June
+               28 - July 1, 2001},
+  pages     = {282--289},
+  publisher = {Morgan Kaufmann},
+  year      = {2001},
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
