--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1325,4 +1325,13 @@
   year={2015}
 }
 
+@article{vaswani2017attention,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
