--- a/slides/NLP-seq2seq.tex
+++ b/slides/NLP-seq2seq.tex
@@ -242,7 +242,7 @@ prefixes that are followed by low-probability events.
 \item It doesn't work well for long sentences!
 \item It also requires the generator to be able to extract this information from the fixed-length vector.
 \item ``You can't cram the meaning of a whole \%\&!\$\# sentence into a single \$\&!\#* vector!'' -Raymond Mooney
-\item This architecture can be can be substantially improved (in many cases it) by the addition of an attention mechanism.
+\item This architecture can be can be substantially improved (in many cases) by the addition of an attention mechanism.
 \item The attention mechanism attempts to solve this problem by allowing the decoder to “look back” at the encoder’s hidden states based on its current state. 
 \end{itemize}
 \end{scriptsize}
