--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1334,4 +1334,38 @@
 }
 
 
+@inproceedings{peters-etal-2018-deep,
+    title = "Deep Contextualized Word Representations",
+    author = "Peters, Matthew E.  and
+      Neumann, Mark  and
+      Iyyer, Mohit  and
+      Gardner, Matt  and
+      Clark, Christopher  and
+      Lee, Kenton  and
+      Zettlemoyer, Luke",
+    booktitle = "Proceedings of the 2018 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long Papers)",
+    month = jun,
+    year = "2018",
+    address = "New Orleans, Louisiana",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/N18-1202",
+    doi = "10.18653/v1/N18-1202",
+    pages = "2227--2237"
+}
+
+@inproceedings{howard-ruder-2018-universal,
+    title = "Universal Language Model Fine-tuning for Text Classification",
+    author = "Howard, Jeremy  and
+      Ruder, Sebastian",
+    booktitle = "Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
+    month = jul,
+    year = "2018",
+    address = "Melbourne, Australia",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/P18-1031",
+    doi = "10.18653/v1/P18-1031",
+    pages = "328--339",
+}
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
