--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1368,4 +1368,13 @@
 }
 
 
+@inproceedings{kenton2019bert,
+  title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+  author={Kenton, Jacob Devlin Ming-Wei Chang and Toutanova, Lee Kristina},
+  booktitle={Proceedings of NAACL-HLT},
+  pages={4171--4186},
+  year={2019}
+}
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
