--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1376,5 +1376,10 @@
   year={2019}
 }
 
+@article{radford2018improving,
+  title={Improving language understanding by generative pre-training},
+  author={Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya and others}
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
