--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1392,4 +1392,13 @@
 }
 
 
+@article{wei2022chain,
+  title={Chain of thought prompting elicits reasoning in large language models},
+  author={Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Chi, Ed and Le, Quoc and Zhou, Denny},
+  journal={arXiv preprint arXiv:2201.11903},
+  year={2022}
+}
+
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
