--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1399,6 +1399,15 @@
   year={2022}
 }
 
+@article{ouyang2022training,
+  title={Training language models to follow instructions with human feedback},
+  author={Ouyang, Long and Wu, Jeffrey and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={27730--27744},
+  year={2022}
+}
+
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
